<resources>
    <string name="app_name">Yemek Sepeti Interview MVP</string>
    <string name="activity_user_list">User List</string>
    <string name="activity_user_detail">User Detail</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="email_invalid">Please enter a valid email address</string>
    <string name="phone_invalid">Please enter a valid phone number</string>
    <string name="login_password_invalid">Please enter a password between 6 – 10 characters</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="internet_connection_error">Please check your internet connection.</string>
    <string name="save">SAVE</string>
    <string name="address_hint">Enter an Address</string>
    <string name="email_hint">Enter an email</string>
    <string name="phone_hint">Enter a phone</string>
    <string name="address_tv">Address :</string>
    <string name="email_tv">Email :</string>
    <string name="phone_tv">Phone :</string>
    <string name="loading">Loading…</string>
    <string name="autofill">AUTOFILL</string>
    <string name="autofill_email">faruk@email.com</string>
    <string name="autofill_password">123456</string>
    <string name="completed">Completed</string>
    <string name="user_updated">User updated…</string>
    <string name="ok">OK</string>
    <string name="invalid_token">Invalid Token</string>
    <string name="server_error">Error!</string>
    <string name="server_error_msg">We were unable to connect you at this point of time. Please try again later.</string>
</resources>
