<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkPrimaryRed"
    android:fitsSystemWindows="true"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/yemeksepeti_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/LoginEditTextTheme">

            <EditText
                android:id="@+id/activity_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:tag="roboto-regular"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/LoginEditTextTheme">

            <EditText
                android:id="@+id/activity_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:tag="roboto-regular"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_white_button"
            android:tag="roboto-medium"
            android:text="@string/login"
            android:textColor="@color/darkPrimaryRed"
            android:textSize="18sp" />

        <Button
            android:id="@+id/activity_login_autofill_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_white_button"
            android:tag="roboto-regular"
            android:text="@string/autofill"
            android:textColor="@color/darkPrimaryRed"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>