<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_detail_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/user_detail_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_account_circle_grey_600_48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_detail_tv_first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="1"
                        android:tag="roboto-regular"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/user_detail_tv_last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:tag="roboto-regular"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/user_detail_tv_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:tag="roboto-light"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:tag="roboto-medium"
                android:text="@string/phone_tv"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_detail_et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:tag="roboto-regular"
                android:textSize="15sp"
                android:theme="@style/DetailEditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="roboto-medium"
                android:text="@string/email_tv"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_detail_et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:tag="roboto-regular"
                android:textSize="15sp"
                android:theme="@style/DetailEditTextTheme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:tag="roboto-medium"
                android:text="@string/address_tv"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_detail_et_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="3"
                android:gravity="start"
                android:hint="@string/address_hint"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:tag="roboto-regular"
                android:textSize="14sp"
                android:theme="@style/DetailEditTextTheme" />
        </LinearLayout>

        <Button
            android:id="@+id/user_detail_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_dark_red_button"
            android:tag="roboto-medium"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>

